Add config files

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,14 +14,15 @@
 ;***************************************************
 [platformio]
 default_envs =
+    ; Comment unneeded environments or create extra
     esp32dev
     esp12e
     d1mini-lolintft24
 
 include_dir =
     include
-    ;lvgl
     ;lv_lib_zifont
+    ;lvgl
     ;png_decoder
 
 [lcd]
@@ -44,10 +45,10 @@ monitor_speed = 115200
 upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
-    ;lvgl@^7.0.0
+    ;lvgl@^7.0.0         ; Not in library yet 
     TFT_eSPI@^1.5.0
     PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@>6.13.0
+    ArduinoJson@^6.14.0
     Syslog@^2.0.0
 
 ; -- littlevgl config options ----------------------
@@ -59,7 +60,6 @@ build_flags =
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     -I include   ; include lv_conf.h and hasp_conf.h
-;   -I drivers/stm32f429_disco
 
 ;***************************************************
 ;          ESP32 build
@@ -164,33 +164,6 @@ lib_deps =
     ${env.lib_deps}
     Ethernet@<2.0.0
 
-
-;***************************************************
-;          STM32f103 Baite Maple
-;***************************************************
-[env:maple]
-platform = ststm32
-board = maple
-monitor_port = COM6     ; Change to the correct port
-upload_port = COM6      ; Change to the correct port
-build_flags =
-    ${env.build_flags}
-; -- TFT_eSPI build options ------------------------
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=${lcd.TFT_WIDTH}
-    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
-    -D USER_SETUP_LOADED=1
-    -D ST7735_DRIVER=1
-    -D ST7735_BLACKTAB=1
-    -D TFT_MISO=-1 ;NC
-    -D TFT_MOSI=13 ;D7
-    -D TFT_SCLK=14 ;D5
-    -D TFT_CS=15   ;D8
-    -D TFT_DC=0    ;D3
-    -D TFT_RST=2   ;D4
-    -D TOUCH_CS=-1 ;NC
-    -D SPI_FREQUENCY=27000000
-    -I "Arduino.h"
 
 ; -- Library options -------------------------------
 lib_deps =
