--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,9 @@
 default_envs =
     ; Comment unneeded environments or create extra
     esp32dev
-    esp12e
     d1mini-lolintft24
+    d1mini32-lolintft24
+    esp12e-st7735
 
 include_dir =
     include
@@ -48,7 +49,7 @@ lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
     TFT_eSPI@^1.5.0
     PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@^6.14.0
+    ArduinoJson@6.13.0   ; 6.14.0 break unicode decoding!
     Syslog@^2.0.0
 
 ; -- littlevgl config options ----------------------
@@ -97,8 +98,40 @@ lib_deps =
 
 src_filter = +<*> +<../drivers/stm32f429_disco>
 
+
 ;***************************************************
-;          D1 Mini with Lolin TFT 2.4"
+;          D1 Mini ESP32 with Lolin TFT 2.4"
+;***************************************************
+[env:d1mini32-lolintft24]
+platform = espressif32
+board = wemos_d1_mini32
+upload_port = COM5       ; Change to the correct port
+monitor_port = COM5      ; Change to the correct port
+board_build.partitions = default.csv
+build_flags =
+    ${env.build_flags}
+; -- TFT_eSPI build options ------------------------
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
+    -D TFT_WIDTH=${lcd.TFT_WIDTH}
+    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
+    -D USER_SETUP_LOADED
+    -D ILI9341_DRIVER
+    -D TFT_MISO=19
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18 
+    -D TFT_DC=5
+    -D TFT_CS=26   
+    -D TFT_BCKL=21
+    -D TFT_RST=-1  ;RST
+    -D TOUCH_CS=17 ;(can also be 22 or 16)
+    -D SPI_FREQUENCY=40000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=20000000
+    -D SUPPORT_TRANSACTIONS
+
+
+;***************************************************
+;          D1 Mini ESP8266 with Lolin TFT 2.4"
 ;***************************************************
 [env:d1mini-lolintft24]
 platform = espressif8266 ;@2.2.3
@@ -128,12 +161,11 @@ build_flags =
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D SUPPORT_TRANSACTIONS
-    ; BGR color swapped
 
 ;***************************************************
 ;          ESP-12 build
 ;***************************************************
-[env:esp12e]
+[env:esp12e-st7735]
 platform = espressif8266 ;@2.2.3
 board = esp12e
 monitor_port = COM5
