remove lv_lib_qrcode submodule

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,7 +49,7 @@ lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
     TFT_eSPI@^1.5.0
     PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@6.13.0   ; 6.14.0 break unicode decoding!
+    ArduinoJson@^6.14.1  ; needs at least 6.14.1
     Syslog@^2.0.0
 
 ; -- littlevgl config options ----------------------
@@ -105,8 +105,8 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 [env:d1mini32-lolintft24]
 platform = espressif32
 board = wemos_d1_mini32
-upload_port = COM5       ; Change to the correct port
-monitor_port = COM5      ; Change to the correct port
+upload_port = COM6       ; Change to the correct port
+monitor_port = COM6      ; Change to the correct port
 board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
