--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,13 @@ include_dir =
     ;lvgl
     ;png_decoder
 
+extra_configs = platformio_override.ini
+
+; -- By default there are no ${override.build_flags} set
+; -- to use it, copy platformio_override.ini from the template
+[override]
+build_flags =
+
 [lcd]
 TFT_WIDTH = 240
 TFT_HEIGHT = 320
@@ -47,9 +54,9 @@ upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
-    TFT_eSPI@^1.5.0
+    TFT_eSPI@^2.0.0
     PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@^6.14.1  ; needs at least 6.14.1
+    ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
 
 ; -- littlevgl config options ----------------------
@@ -61,6 +68,7 @@ build_flags =
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     -I include   ; include lv_conf.h and hasp_conf.h
+    ${override.build_flags}
 
 ;***************************************************
 ;          ESP32 build
