Test 160Mhz D1 mini

--- a/platformio.ini
+++ b/platformio.ini
@@ -148,6 +148,7 @@ upload_port = COM4       ; Change to the correct port
 monitor_port = COM4      ; Change to the correct port
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
+board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${env.build_flags}
     -Wl,-Teagle.flash.4m3m.ld
