--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ default_envs =
     esp32dev
     d1mini-lolintft24
     d1mini32-lolintft24
+    lolind32pro-lolintft24
     esp12e-st7735
 
 include_dir =
@@ -115,6 +116,37 @@ platform = espressif32
 board = wemos_d1_mini32
 upload_port = COM6       ; Change to the correct port
 monitor_port = COM6      ; Change to the correct port
+board_build.partitions = default.csv
+build_flags =
+    ${env.build_flags}
+; -- TFT_eSPI build options ------------------------
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
+    -D TFT_WIDTH=${lcd.TFT_WIDTH}
+    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
+    -D USER_SETUP_LOADED
+    -D ILI9341_DRIVER
+    -D TFT_MISO=19
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18 
+    -D TFT_DC=5
+    -D TFT_CS=26   
+    -D TFT_BCKL=21
+    -D TFT_RST=-1  ;RST
+    -D TOUCH_CS=17 ;(can also be 22 or 16)
+    -D SPI_FREQUENCY=40000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=20000000
+    -D SUPPORT_TRANSACTIONS
+
+
+;***************************************************
+;          Lolin D32 Pro with Lolin TFT 2.4"
+;***************************************************
+[env:lolind32pro-lolintft24]
+platform = espressif32
+board = lolin_d32_pro
+upload_port = COM8       ; Change to the correct port
+monitor_port = COM8      ; Change to the correct port
 board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
