--- a/platformio.ini
+++ b/platformio.ini
@@ -79,6 +79,8 @@ platform = espressif32
 board = esp32dev
 upload_port = COM3      ; Change to the correct port
 monitor_port = COM3     ; Change to the correct port
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 
 build_flags =
     ${env.build_flags}
