--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,16 @@ extra_configs = platformio_override.ini
 [override]
 build_flags =
 
+[pins]
+vspi32 =
+    -D TFT_MISO=19
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18
+hspi32 =
+    -D TFT_MISO=12
+    -D TFT_MOSI=13
+    -D TFT_SCLK=14
+
 [lcd]
 TFT_WIDTH = 240
 TFT_HEIGHT = 320
@@ -90,10 +100,9 @@ build_flags =
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D USER_SETUP_LOADED=1
     -D ILI9341_DRIVER=1
-    -D TFT_MISO=19
-    -D TFT_MOSI=23
-    -D TFT_SCLK=18
+    ${pins.vspi32}
     -D TFT_CS=5
+    -D TFT_BCKL=21
     -D TFT_DC=2
     -D TFT_RST=4
     -D TOUCH_CS=21
@@ -127,9 +136,7 @@ build_flags =
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D USER_SETUP_LOADED
     -D ILI9341_DRIVER
-    -D TFT_MISO=19
-    -D TFT_MOSI=23
-    -D TFT_SCLK=18 
+    ${pins.vspi32}
     -D TFT_DC=5
     -D TFT_CS=26   
     -D TFT_BCKL=21
@@ -158,9 +165,7 @@ build_flags =
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D USER_SETUP_LOADED
     -D ILI9341_DRIVER
-    -D TFT_MISO=19
-    -D TFT_MOSI=23
-    -D TFT_SCLK=18 
+    ${pins.vspi32}
     -D TFT_DC=5
     -D TFT_CS=26   
     -D TFT_BCKL=21
