--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ build_flags =
     -Os          ; Code Size Optimization
     -w           ; Suppress warnings
     -D LV_CONF_INCLUDE_SIMPLE
-    -D SPIFFS_TEMPORAL_FD_CACHE     ; speed up opening recent files
+    -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     -I include   ; include lv_conf.h and hasp_conf.h
@@ -95,6 +95,7 @@ debug_init_break = tbreak setup
 build_flags =
     ${env.build_flags}
 ; -- TFT_eSPI build options ------------------------
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=${lcd.TFT_WIDTH}
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
@@ -131,6 +132,7 @@ board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
 ; -- TFT_eSPI build options ------------------------
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=${lcd.TFT_WIDTH}
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
@@ -160,6 +162,7 @@ board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
 ; -- TFT_eSPI build options ------------------------
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=${lcd.TFT_WIDTH}
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
@@ -192,6 +195,7 @@ build_flags =
     ${env.build_flags}
     -Wl,-Teagle.flash.4m3m.ld
 ; -- TFT_eSPI build options ------------------------
+    -D MQTT_MAX_PACKET_SIZE=512     ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=${lcd.TFT_WIDTH}
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
@@ -224,6 +228,7 @@ build_flags =
     ${env.build_flags}
     -Wl,-Teagle.flash.4m3m.ld
 ; -- TFT_eSPI build options ------------------------
+    -D MQTT_MAX_PACKET_SIZE=512     ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=${lcd.TFT_WIDTH}
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
