Fix build warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,24 +60,26 @@ TFT_ROTATION = 0 ; 0=0, 1=90, 2=180 or 3=270 degree
 
 [env]
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 74880
 upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
-    TFT_eSPI@^2.0.0
+    TFT_eSPI@^2.1.2
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
 
+
 ; -- littlevgl config options ----------------------
 build_flags =
     -Os          ; Code Size Optimization
-    -w           ; Suppress warnings
+    ;-w           ; Suppress warnings
     -D LV_CONF_INCLUDE_SIMPLE
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    ;-D Pins_Arduino_h               ; fix for D32 warnings
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
@@ -126,8 +128,8 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 [env:d1mini32-lolintft24]
 platform = espressif32
 board = wemos_d1_mini32
-upload_port = COM6       ; Change to the correct port
-monitor_port = COM6      ; Change to the correct port
+upload_port = COM8       ; Change to the correct port
+monitor_port = COM8      ; Change to the correct port
 board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
@@ -190,10 +192,10 @@ upload_port = COM4       ; Change to the correct port
 monitor_port = COM4      ; Change to the correct port
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
+board_build.ldscript = eagle.flash.4m3m.ld  ; 3Mb Spiffs
 board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${env.build_flags}
-    -Wl,-Teagle.flash.4m3m.ld
 ; -- TFT_eSPI build options ------------------------
     -D MQTT_MAX_PACKET_SIZE=512     ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
@@ -224,9 +226,9 @@ monitor_port = COM5
 upload_port = COM5      ; Change to the correct port
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
+board_build.ldscript = eagle.flash.4m3m.ld  ; 3Mb Spiffs
 build_flags =
     ${env.build_flags}
-    -Wl,-Teagle.flash.4m3m.ld
 ; -- TFT_eSPI build options ------------------------
     -D MQTT_MAX_PACKET_SIZE=512     ; longer PubSubClient messages
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
