Update libraries and fix platform version

--- a/platformio.ini
+++ b/platformio.ini
@@ -65,7 +65,7 @@ upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
-    TFT_eSPI@^2.1.2
+    TFT_eSPI@^2.1.3      ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
@@ -73,13 +73,13 @@ lib_deps =
 
 ; -- littlevgl config options ----------------------
 build_flags =
-    -Os          ; Code Size Optimization
+    ;-Os          ; Code Size Optimization
+    -Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D LV_CONF_INCLUDE_SIMPLE
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
-    ;-D Pins_Arduino_h               ; fix for D32 warnings
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
@@ -87,7 +87,7 @@ build_flags =
 ;          ESP32 build
 ;***************************************************
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@1.11.1
 board = esp32dev
 upload_port = COM3      ; Change to the correct port
 monitor_port = COM3     ; Change to the correct port
@@ -186,7 +186,7 @@ build_flags =
 ;          D1 Mini ESP8266 with Lolin TFT 2.4"
 ;***************************************************
 [env:d1mini-lolintft24]
-platform = espressif8266 ;@2.2.3
+platform = espressif8266@2.3.2
 board = d1_mini
 upload_port = COM4       ; Change to the correct port
 monitor_port = COM4      ; Change to the correct port
