--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,6 @@ TFT_ROTATION = 0 ; 0=0, 1=90, 2=180 or 3=270 degree
 
 [env]
 framework = arduino
-monitor_speed = 74880
 upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
@@ -91,6 +90,7 @@ platform = espressif32@1.11.1
 board = esp32dev
 upload_port = COM3      ; Change to the correct port
 monitor_port = COM3     ; Change to the correct port
+monitor_speed = 115200
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -130,6 +130,7 @@ platform = espressif32
 board = wemos_d1_mini32
 upload_port = COM8       ; Change to the correct port
 monitor_port = COM8      ; Change to the correct port
+monitor_speed = 115200
 board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
@@ -160,6 +161,7 @@ platform = espressif32
 board = lolin_d32_pro
 upload_port = COM8       ; Change to the correct port
 monitor_port = COM8      ; Change to the correct port
+monitor_speed = 115200
 board_build.partitions = default.csv
 build_flags =
     ${env.build_flags}
@@ -190,6 +192,7 @@ platform = espressif8266@2.3.2
 board = d1_mini
 upload_port = COM4       ; Change to the correct port
 monitor_port = COM4      ; Change to the correct port
+monitor_speed = 74880
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m3m.ld  ; 3Mb Spiffs
@@ -222,8 +225,9 @@ build_flags =
 [env:esp12e-st7735]
 platform = espressif8266 ;@2.2.3
 board = esp12e
-monitor_port = COM5
 upload_port = COM5      ; Change to the correct port
+monitor_port = COM5     ; Change to the correct port
+monitor_speed = 74880
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m3m.ld  ; 3Mb Spiffs
