--- a/platformio.ini
+++ b/platformio.ini
@@ -64,7 +64,8 @@ upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
-    TFT_eSPI@^2.1.3      ; Tft SPI drivers
+    ;TFT_eSPI@^2.1.3      ; Tft SPI drivers
+    TFT_eSPI@^1.4.20     ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
@@ -159,8 +160,8 @@ build_flags =
 [env:lolind32pro-lolintft24]
 platform = espressif32
 board = lolin_d32_pro
-upload_port = COM8       ; Change to the correct port
-monitor_port = COM8      ; Change to the correct port
+upload_port = COM7       ; Change to the correct port
+monitor_port = COM7      ; Change to the correct port
 monitor_speed = 115200
 board_build.partitions = default.csv
 build_flags =
