--- a/platformio.ini
+++ b/platformio.ini
@@ -80,6 +80,7 @@ build_flags =
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    -D HTTP_UPLOAD_BUFLEN=1436      ; lower ESP8266 upload buffer
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
@@ -212,9 +213,9 @@ build_flags =
     -D TFT_SCLK=14 ;D5
     -D TFT_DC=15   ;D8
     -D TFT_CS=16   ;D0
-    -D TFT_BCKL=5  ;D1
+    -D TFT_BCKL=2  ;D4  (can also be D1 or D2)
+    -D TOUCH_CS=0  ;D3  (can also be D1 or D2)
     -D TFT_RST=-1  ;RST
-    -D TOUCH_CS=0  ;D3  (can also be D1 or D4)
     -D SPI_FREQUENCY=40000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
@@ -247,8 +248,9 @@ build_flags =
     -D TFT_SCLK=14 ;D5
     -D TFT_CS=15   ;D8
     -D TFT_DC=0    ;D3
-    -D TFT_RST=2   ;D4
+    -D TFT_BCKL=2  ;D4  (can also be D1 or D2)
     -D TOUCH_CS=-1 ;NC
+    -D TFT_RST=2   ;D4
     -D SPI_FREQUENCY=27000000
 
 ; -- Library options -------------------------------
