--- a/platformio.ini
+++ b/platformio.ini
@@ -64,8 +64,8 @@ upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@^7.0.0         ; Not in library yet 
-    ;TFT_eSPI@^2.1.3      ; Tft SPI drivers
-    TFT_eSPI@^1.4.20     ; Tft SPI drivers
+    TFT_eSPI@^2.1.3      ; Tft SPI drivers
+    ;TFT_eSPI@^1.4.20     ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
@@ -80,7 +80,7 @@ build_flags =
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
-    -D HTTP_UPLOAD_BUFLEN=1436      ; lower ESP8266 upload buffer
+    -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
