Suppress Lolin D32 Pro warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -158,6 +158,7 @@ build_flags =
 ;***************************************************
 ;          Lolin D32 Pro with Lolin TFT 2.4"
 ;***************************************************
+; This board already defines TFT_CS, TFT_DC and TFT_RST
 [env:lolind32pro-lolintft24]
 platform = espressif32
 board = lolin_d32_pro
@@ -175,10 +176,10 @@ build_flags =
     -D USER_SETUP_LOADED
     -D ILI9341_DRIVER
     ${pins.vspi32}
-    -D TFT_DC=5
-    -D TFT_CS=26   
+    ;-D TFT_DC=5
+    ;-D TFT_CS=26   
     -D TFT_BCKL=21
-    -D TFT_RST=-1  ;RST
+    ;-D TFT_RST=-1  ;RST
     -D TOUCH_CS=17 ;(can also be 22 or 16)
     -D SPI_FREQUENCY=40000000
     -D SPI_TOUCH_FREQUENCY=2500000
