Update to lvgl 6.1.2

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,9 +63,9 @@ framework = arduino
 upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
-    ;lvgl@^7.0.0         ; Not in library yet 
-    TFT_eSPI@^2.1.3      ; Tft SPI drivers
-    ;TFT_eSPI@^1.4.20     ; Tft SPI drivers
+    https://github.com/littlevgl/lvgl.git ;lvgl@6.1.2 - Not in library yet 
+    TFT_eSPI@^2.1.6      ; Tft SPI drivers
+    ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
     Syslog@^2.0.0
