--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ lib_deps =
 ; -- littlevgl config options ----------------------
 build_flags =
     ;-Os          ; Code Size Optimization
-    -Og          ; Code Debug Optimization
+    ;-Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D LV_CONF_INCLUDE_SIMPLE
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
@@ -194,9 +194,9 @@ build_flags =
 [env:d1mini-lolintft24]
 platform = espressif8266@2.3.2
 board = d1_mini
-;upload_port = COM4       ; Change to the correct port
-upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-upload_port = 10.1.0.148 ; IP of the ESP
+upload_port = COM4       ; Change to the correct port
+;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
+;upload_port = 10.1.0.148 ; IP of the ESP
 monitor_port = COM4      ; Change to the correct port
 monitor_speed = 74880
 board_build.f_flash = 40000000L
