--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ default_envs =
     ;nodemcu32s-raspi
 
 ; -- Location of the configuration files
-include_dir =
-    include
+;include_dir =
+    ;include
     ;lv_lib_zifont
     ;lvgl
     ;png_decoder
@@ -58,7 +58,7 @@ lib_deps =
 build_flags =
     ;-Os          ; Code Size Optimization
     ;-Og          ; Code Debug Optimization
-    -w           ; Suppress warnings
+    ;-w           ; Suppress warnings
     -D LV_CONF_INCLUDE_SIMPLE
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
@@ -99,9 +99,9 @@ hspi32 =
 
 ; -- Configuration parameters for standard displays
 [lcd]
-tft_rotation = 0 ; default rotation
-tft_width = 240  ; default width
-tft_height = 320 ; default height
+tft_rotation = 0      ; default rotation
+tft_width = 240       ; default width
+tft_height = 320      ; default height
 lolin24 =
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
@@ -151,10 +151,10 @@ build_flags =
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
-    -D TFT_CS=5
-    -D TFT_BCKL=21
     -D TFT_DC=2
+    -D TFT_CS=5
     -D TFT_RST=4
+    -D TFT_BCKL=20
     -D TOUCH_CS=21
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
@@ -258,27 +258,19 @@ board_build.partitions = default.csv
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=${lcd.TFT_WIDTH}
-    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
-    -D USER_SETUP_LOADED
-    -D ILI9341_DRIVER
+    ${lcd.lolin24}
     ${pins.vspi32}
     -D TFT_DC=5
-    -D TFT_CS=26   
-    -D TFT_BCKL=21
+    -D TFT_CS=26 
     -D TFT_RST=-1  ;RST
+    -D TFT_BCKL=21
     -D TOUCH_CS=17 ;(can also be 22 or 16)
-    -D SPI_FREQUENCY=40000000
-    -D SPI_TOUCH_FREQUENCY=2500000
-    -D SPI_READ_FREQUENCY=20000000
-    -D SUPPORT_TRANSACTIONS
 
 
 ;***************************************************
 ;          Lolin D32 Pro with Lolin TFT 2.4"
 ;***************************************************
-; This board already defines TFT_CS, TFT_DC and TFT_RST
+; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 [env:lolind32pro-lolintft24]
 platform = espressif32
 board = lolin_d32_pro
@@ -291,11 +283,11 @@ build_flags =
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
-    -D TFT_DC=5
-    -D TFT_CS=26   
+    ;-D TFT_DC=5    ; Defined by board, don't redefine
+    ;-D TFT_CS=26   ; Defined by board, don't redefine
+    ;-D TFT_RST=-1  ; Defined by board, don't redefine
     -D TFT_BCKL=21
-    -D TFT_RST=-1  ;RST
-    -D TOUCH_CS=17 ;(can also be 22 or 16)
+    -D TOUCH_CS=17  ;(can also be 22 or 16)
 
 
 ;***************************************************
@@ -317,15 +309,14 @@ build_flags =
     ${flags.esp8266_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
-
-    ;-D TFT_MISO=12 ;D6
-    ;-D TFT_MOSI=13 ;D7
-    ;-D TFT_SCLK=14 ;D5
-    -D TFT_DC=15   ;D8
-    -D TFT_CS=16   ;D0
-    -D TFT_BCKL=2  ;D4  (can also be D1 or D2)
-    -D TOUCH_CS=0  ;D3  (can also be D1 or D2)
-    -D TFT_RST=-1  ;RST
+    ;-D TFT_MISO=12 ;D6  Default HSPI
+    ;-D TFT_MOSI=13 ;D7  Default HSPI
+    ;-D TFT_SCLK=14 ;D5  Default HSPI
+    -D TFT_DC=15    ;D8
+    -D TFT_CS=16    ;D0
+    -D TFT_BCKL=2   ;D4  (can also be D1 or D2)
+    -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
+    -D TFT_RST=-1   ;RST
 
 
 ;***************************************************
