Set Mqtt packet size back to 1KB

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,7 @@ build_flags =
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    ;-D DISABLE_LOGGING
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
@@ -71,7 +72,7 @@ build_flags =
 esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=512      ; lower http upload buffer
-    -D MQTT_MAX_PACKET_SIZE=768    ; longer PubSubClient messages
+    -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
 esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
@@ -299,6 +300,8 @@ board = d1_mini
 upload_port = COM13       ; Change to the correct port
 ;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
 ;upload_port = 10.1.0.148 ; IP of the ESP
+;upload_flags =
+;  --port=3232
 monitor_port = COM13      ; Change to the correct port
 monitor_speed = 115200
 board_build.f_flash = 40000000L
