--- a/platformio.ini
+++ b/platformio.ini
@@ -43,10 +43,10 @@ upload_speed = 921600
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@7.0.0          ; Not in library yet 
-    TFT_eSPI@^2.1.7      ; Tft SPI drivers
+    TFT_eSPI@^2.1.9      ; Tft SPI drivers
     ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@^6.14.1,>6.14.0  ; needs at least 6.14.1
+    ArduinoJson@^6.15.0,>6.14.1  ; needs at least 6.14.1
     Syslog@^2.0.0
     AceButton@^1.4.0
     ;AsyncTCP
@@ -250,7 +250,7 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 ;          D1 Mini ESP32 with Lolin TFT 2.4"
 ;***************************************************
 [env:d1mini32-lolintft24]
-platform = espressif32
+platform = espressif32@^1.12.0
 board = wemos_d1_mini32
 upload_port = COM6       ; Change to the correct port
 monitor_port = COM6      ; Change to the correct port
@@ -295,7 +295,7 @@ build_flags =
 ;          D1 Mini ESP8266 with Lolin TFT 2.4"
 ;***************************************************
 [env:d1mini-lolintft24]
-platform = espressif8266 ;@2.3.2
+platform = espressif8266@^2.4.0 ;@2.3.2
 board = d1_mini
 upload_port = COM13       ; Change to the correct port
 ;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
@@ -326,7 +326,7 @@ build_flags =
 ;          ESP-12 build
 ;***************************************************
 [env:esp12e-st7735]
-platform = espressif8266 ;@2.2.3
+platform = espressif8266@^2.4.0 ;@2.3.2
 board = esp12e
 upload_port = COM13     ; Change to the correct port
 monitor_port = COM13    ; Change to the correct port
