Add instructions & exclude lvgl6 from 0.1.0 build

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,6 +53,8 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
+lib_ignore = 
+    lvgl@<6.0.0          ; Ignore v6.x.x versions 
 
 ; -- littlevgl config options ----------------------
 build_flags =
