--- a/platformio.ini
+++ b/platformio.ini
@@ -52,15 +52,21 @@ lib_deps =
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
+    https://github.com/fvanroie/lvgl.git
+    lvgl@baee5eb
+
 
 lib_ignore = 
-    lvgl@<7.0.0          ; Ignore v6.x.x versions 
+    https://github.com/littlevgl/lvgl.git
+    lvgl@^6.1.2
+    lvgl@^6.1.1
 
 ; -- littlevgl config options ----------------------
 build_flags =
-    ;-Os          ; Code Size Optimization
+    -Os          ; Code Size Optimization
     ;-Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
+    -D CORE_DEBUG_LEVEL=1           ; Errors
     -D LV_CONF_INCLUDE_SIMPLE
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
