Configure PlatformIO values for our screen

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@
 [platformio]
 default_envs =
     ; Comment unneeded environments or create extra
-    esp32dev
+    ;esp32dev
     d1mini-lolintft24
-    d1mini32-lolintft24
-    lolind32pro-lolintft24
-    esp12e-st7735
+    ;d1mini32-lolintft24
+    ;lolind32pro-lolintft24
+    ;esp12e-st7735
 
 include_dir =
     include
@@ -194,15 +194,15 @@ build_flags =
 [env:d1mini-lolintft24]
 platform = espressif8266@2.3.2
 board = d1_mini
-upload_port = COM13       ; Change to the correct port
+upload_port = COM3       ; Change to the correct port
 ;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
 ;upload_port = 10.1.0.148 ; IP of the ESP
-monitor_port = COM13      ; Change to the correct port
+monitor_port = COM3      ; Change to the correct port
 monitor_speed = 74880
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
-board_build.f_cpu = 160000000L ; set frequency to 160MHz
+;board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${env.build_flags}
 ; -- TFT_eSPI build options ------------------------
@@ -212,15 +212,15 @@ build_flags =
     -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D USER_SETUP_LOADED
     -D ILI9341_DRIVER
-    -D TFT_MISO=12 ;D6
-    -D TFT_MOSI=13 ;D7
-    -D TFT_SCLK=14 ;D5
-    -D TFT_DC=15   ;D8
-    -D TFT_CS=16   ;D0
-    -D TFT_BCKL=2  ;D4  (can also be D1 or D2)
+    ;-D TFT_MISO=12 ;D6
+    ;-D TFT_MOSI=13 ;D7
+    ;-D TFT_SCLK=14 ;D5
+    -D TFT_DC=4   ;D8
+    -D TFT_CS=5   ;D0
+    -D TFT_BCKL=15  ;D4  (can also be D1 or D2)
     -D TOUCH_CS=0  ;D3  (can also be D1 or D2)
     -D TFT_RST=-1  ;RST
-    -D SPI_FREQUENCY=40000000
+    -D SPI_FREQUENCY=27000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D SUPPORT_TRANSACTIONS
