Fix ESP8266 crash

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,8 +55,7 @@ lib_deps =
 
 lib_ignore = 
     https://github.com/littlevgl/lvgl.git
-    lvgl@^6.1.2
-    lvgl@^6.1.1
+
 
 ; -- littlevgl config options ----------------------
 build_flags =
@@ -76,7 +75,7 @@ build_flags =
 [flags]
 esp8266_flags=
     ${env.build_flags}
-    -D HTTP_UPLOAD_BUFLEN=512      ; lower http upload buffer
+    -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
 esp32_flags=
     ${env.build_flags}
@@ -160,7 +159,7 @@ build_flags =
     -D TFT_DC=2
     -D TFT_CS=5
     -D TFT_RST=4
-    -D TFT_BCKL=20
+    -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 20)
     -D TOUCH_CS=21
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
@@ -222,11 +221,11 @@ build_flags =
     -D ILI9488_DRIVER=1
     ${pins.vspi32}
     -D ESP32_PARALLEL=1
-    -D define PSEUDO_8_BIT=1
+    -D PSEUDO_8_BIT=1
     -D TFT_CS=34  ; Chip select control pin
     -D TFT_DC=36  ; Data Command control pin - must use a pin in the range 0-31
-    -D TFT_RST=38  ; Reset pin
-    -D TFT_WR=4  ; Write strobe control pin - must use a pin in the range 0-31
+    -D TFT_RST=38 ; Reset pin
+    -D TFT_WR=4   ; Write strobe control pin - must use a pin in the range 0-31
     -D TFT_RD=2
     -D TFT_D0=12  ; Must use pins in the range 0-31 for the data bus
     -D TFT_D1=13  ; so a single register write sets/clears all bits
@@ -268,9 +267,9 @@ build_flags =
     ${pins.vspi32}
     -D TFT_DC=5
     -D TFT_CS=26 
-    -D TFT_RST=-1  ;RST
-    -D TFT_BCKL=21
-    -D TOUCH_CS=17 ;(can also be 22 or 16)
+    -D TFT_RST=-1  ; RST
+    -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17 ; (can also be 22 or 16)
 
 
 ;***************************************************
@@ -292,8 +291,8 @@ build_flags =
     ;-D TFT_DC=5    ; Defined by board, don't redefine
     ;-D TFT_CS=26   ; Defined by board, don't redefine
     ;-D TFT_RST=-1  ; Defined by board, don't redefine
-    -D TFT_BCKL=21
-    -D TOUCH_CS=17  ;(can also be 22 or 16)
+    -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17  ; (can also be 22 or 16)
 
 
 ;***************************************************
@@ -322,7 +321,7 @@ build_flags =
     ;-D TFT_SCLK=14 ;D5  Default HSPI
     -D TFT_DC=15    ;D8
     -D TFT_CS=16    ;D0
-    -D TFT_BCKL=2   ;D4  (can also be D1 or D2)
+    -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
     -D TFT_RST=-1   ;RST
 
@@ -354,7 +353,7 @@ build_flags =
     -D TFT_SCLK=14 ;D5
     -D TFT_CS=15   ;D8
     -D TFT_DC=0    ;D3
-    -D TFT_BCKL=2  ;D4  (can also be D1 or D2)
+    -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=-1 ;NC
     -D TFT_RST=2   ;D4
     -D SPI_FREQUENCY=27000000
@@ -388,7 +387,7 @@ build_flags =
     -D TFT_SCLK=14 ;D5
     -D TFT_CS=15   ;D8
     -D TFT_DC=0    ;D3
-    -D TFT_BCKL=2  ;D4
+    -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=-1 ;NC
     -D TFT_RST=2   ;D4
     -D SPI_FREQUENCY=27000000
