--- a/platformio.ini
+++ b/platformio.ini
@@ -218,13 +218,14 @@ build_flags =
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
     -D USER_SETUP_LOADED=1
-    -D ILI9488_DRIVER=1
+    -D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
+    ; -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
     ${pins.vspi32}
     -D ESP32_PARALLEL=1
     -D PSEUDO_8_BIT=1
-    -D TFT_CS=34  ; Chip select control pin
-    -D TFT_DC=36  ; Data Command control pin - must use a pin in the range 0-31
-    -D TFT_RST=38 ; Reset pin
+    -D TFT_CS=33  ; Chip select control pin
+    -D TFT_DC=15  ; Data Command control pin - must use a pin in the range 0-31
+    -D TFT_RST=32 ; Reset pin
     -D TFT_WR=4   ; Write strobe control pin - must use a pin in the range 0-31
     -D TFT_RD=2
     -D TFT_D0=12  ; Must use pins in the range 0-31 for the data bus
