--- a/platformio.ini
+++ b/platformio.ini
@@ -116,6 +116,7 @@ lolin24 =
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=0 ; XPT2606 Resistive touch panel driver
     -D SUPPORT_TRANSACTIONS
 raspberrypi =
     -D RPI_DISPLAY_TYPE=1
@@ -134,6 +135,7 @@ mrb3511 =
     -D TFT_HEIGHT=480
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=1 ; GT911 Capacitive touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 ; Rotation params:
@@ -163,7 +165,7 @@ build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.mrb3511}
-    -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
     -D TFT_DC=15  ; =RS; Data Command control pin - must use a pin in the range 0-31
     -D TFT_RST=32 ; Reset pin
@@ -177,10 +179,9 @@ build_flags =
     -D TFT_D5=16
     -D TFT_D6=27
     -D TFT_D7=14
-    -D TOUCH_DRIVER=1 ; GT911 Capacitive touch panel driver
     -D TOUCH_SDA=21
     -D TOUCH_SCL=22
-    -D TOUCH_IRQ=23   ; not used or 23
+    -D TOUCH_IRQ=34   ; use 34-39 as these are input only pins
     -D TOUCH_RST=-1   ; not used, connected to 3.3V
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
