Add esp32dev-ili9488 environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ default_envs =
     esp12e-st7735
     d132-unoshield
     ;nodemcu32s-raspi
+    ;esp32dev-ili9488
 
 ; -- Location of the configuration files
 ;include_dir =
@@ -190,6 +191,54 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     https://github.com/netwizeBE/arduino-goodix.git  ; GT911 touch screen driver
+
+src_filter = +<*> +<../drivers/stm32f429_disco>
+
+
+;***************************************************
+;          Generic ESP32 build with ILI9488 SPI 4-WIRE
+;***************************************************
+[env:esp32dev-ili9488]
+platform = espressif32
+board = esp32dev
+upload_port = COM11      ; Change to the correct port
+monitor_port = COM11     ; Change to the correct port
+; upload_protocol = espota ; Use ArduinoOTA after flashing over serial
+; upload_port = 10.4.0.171 ; IP of the ESP
+; upload_flags =
+;  --port=3232
+monitor_speed = 115200
+debug_tool = esp-prog
+debug_init_break = tbreak setup
+
+build_flags =
+    ${flags.esp32_flags}
+; -- TFT_eSPI build options ------------------------
+    -D ILI9488_DRIVER=1
+    -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
+    -D USER_SETUP_LOADED=1
+    -D TFT_MISO=19 ;// (leave TFT SDO disconnected if other SPI devices share MISO)
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18
+    -D TFT_CS=15  ;// Chip select control pin
+    -D TFT_DC=2  ;// Data Command control pin
+    -D TFT_RST=4 ;// Reset pin (could connect to RST pin)
+    -D SUPPORT_TRANSACTIONS
+    -D TOUCH_CS=22
+    -D TOUCH_DRIVER=0 ; XPT2606 Resistive touch panel driver
+    -D SPI_FREQUENCY=27000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=16000000
+
+; -- Debugging options -----------------------------
+;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+
+; -- Library options -------------------------------
+lib_deps =
+    ${env.lib_deps}
 
 src_filter = +<*> +<../drivers/stm32f429_disco>
 
