Add stm32 build_flags

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,8 +58,8 @@ lib_ignore =
 
 ; -- littlevgl config options ----------------------
 build_flags =
-    -Os          ; Code Size Optimization
-    ;-Og          ; Code Debug Optimization
+    ;-Os          ; Code Size Optimization
+    -Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D CORE_DEBUG_LEVEL=1           ; Errors
     -D LV_CONF_INCLUDE_SIMPLE
@@ -80,7 +80,8 @@ esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
-
+stm32_flags=
+    ${env.build_flags}
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
