Updates for stm32f407vg

--- a/platformio.ini
+++ b/platformio.ini
@@ -76,12 +76,17 @@ esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
+    -D MY_IRAM_ATTR=IRAM_ATTR
+
 esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+    -D MY_IRAM_ATTR=IRAM_ATTR
+
 stm32_flags=
     ${env.build_flags}
+    -D MY_IRAM_ATTR=
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
@@ -113,6 +118,37 @@ hspi32 =
 ; 6 - mirror content, and rotate 0 deg anti-clockwise
 ; 7 - mirror content, and rotate 90 deg anti-clockwise
 
+
+
+;***************************************************
+;          STM32F4 build
+;***************************************************
+[env:black_f407vg]
+platform = ststm32
+board = diymore_f407vgt
+board_build.mcu = stm32f407vgt6
+upload_protocol = dfu
+monitor_port = COM7     ; To change the port, use platform_override.ini
+build_flags =
+    ${env.build_flags}
+    ${flags.stm32_flags}
+; -- TFT_eSPI build options ------------------------
+    ${lcd.lolin24}
+    ;-D TFT_MISO=PB4 ;Default
+    ;-D TFT_MOSI=PB5 ;Default
+    ;-D TFT_SCLK=PB3 ;Default
+    -D TFT_CS=PB11 ;D8
+    -D TFT_DC=PC5  ;D3
+    -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
+    -D TOUCH_CS=PC4 ;NC
+    -D TFT_RST=-1  ;D4
+    -D STM32
+
+lib_deps =
+    ${env.lib_deps}
+    Ticker@^3.1.5
+    STM32duino LwIP@^2.1.2
+    STM32duino STM32Ethernet@^1.0.5
 
 ;***************************************************
 ;          Generic ESP32 build
@@ -387,35 +423,6 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ;Ethernet@<2.0.0
-
-;***************************************************
-;          STM32F4 build
-;***************************************************
-[env:black_f407vg]
-platform = ststm32
-board = diymore_f407vgt
-board_build.mcu = stm32f407vgt6
-upload_protocol = dfu
-build_flags =
-    ${env.build_flags}
-    ${flags.stm32_flags}
-; -- TFT_eSPI build options ------------------------
-    -D USER_SETUP_LOADED=1
-    -D ST7735_DRIVER=1
-    -D ST7735_BLACKTAB=1
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=${lcd.TFT_WIDTH}
-    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
-    -D TFT_MISO=-1 ;NC
-    -D TFT_MOSI=13 ;D7
-    -D TFT_SCLK=14 ;D5
-    -D TFT_CS=15   ;D8
-    -D TFT_DC=0    ;D3
-    -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
-    -D TOUCH_CS=-1 ;NC
-    -D TFT_RST=2   ;D4
-    -D SPI_FREQUENCY=27000000
-
 
 ;***************************************************
 ;          Native build
