Updates for stmf407vg

--- a/platformio.ini
+++ b/platformio.ini
@@ -76,17 +76,15 @@ esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
-    -D MY_IRAM_ATTR=IRAM_ATTR
 
 esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
-    -D MY_IRAM_ATTR=IRAM_ATTR
 
 stm32_flags=
     ${env.build_flags}
-    -D MY_IRAM_ATTR=
+    -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
