--- a/platformio.ini
+++ b/platformio.ini
@@ -70,6 +70,8 @@ build_flags =
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
 
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
+
 ; -- Platform specific build flags
 [flags]
 esp8266_flags=
@@ -130,6 +132,7 @@ monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
+    -I include/stm32f4
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
@@ -147,6 +150,9 @@ lib_deps =
     Ticker@^3.1.5
     STM32duino LwIP@^2.1.2
     STM32duino STM32Ethernet@^1.0.5
+
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+
 
 ;***************************************************
 ;          Generic ESP32 build
