Change to forked tft_eSPI

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,8 @@ monitor_speed = 115200
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@7.0.0          ; Not in library yet 
-    TFT_eSPI@^2.1.9      ; Tft SPI drivers
+    https://github.com/netwizeBE/TFT_eSPI.git
+    ;TFT_eSPI@^2.2.2     ; Tft SPI drivers
     ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
     PubSubClient@^2.7.0  ; MQTT client
     ArduinoJson@^6.15.1,>6.15.0  ; needs at least 6.15.0
