Fix merge issue

--- a/platformio.ini
+++ b/platformio.ini
@@ -88,6 +88,7 @@ esp32_flags=
 stm32_flags=
     ${env.build_flags}
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
+    -D STM32
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
@@ -144,7 +145,8 @@ build_flags =
     -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=PC4 ;NC
     -D TFT_RST=-1  ;D4
-    -D STM32
+    -D HASP_OUTPUT_PIN=PA1 ; User LED D2 on DevEBox board
+    -D HASP_INPUT_PIN=PA0 ; User Button K1 on DevEBox board
 
 lib_deps =
     ${env.lib_deps}
