--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -1,7 +1,7 @@
-; Copy this file and rename it to platform_override.ini
-; ONLY edit platform_override.ini to make local changes to the parameters
+; Copy this file and rename it to platformio_override.ini
+; ONLY edit platformio_override.ini to make local changes to the parameters
 ;
-; The platform_override.ini file is not overwritten or monitored by git
+; The platformio_override.ini file is not overwritten or monitored by git
 
 
 [override]
