initial ethernet support for STM32F4xx

--- a/platformio.ini
+++ b/platformio.ini
@@ -152,12 +152,16 @@ build_flags =
     -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
     -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+    -D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
+    -D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 address
 
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
-    STM32duino LwIP@^2.1.2
-    STM32duino STM32Ethernet@^1.0.5
+    ; STM32duino LwIP@^2.1.2
+    ; STM32duino STM32Ethernet@^1.0.5
+    https://github.com/stm32duino/LwIP.git
+    https://github.com/stm32duino/STM32Ethernet.git
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
 
